--- a/bingo5.css
+++ b/bingo5.css
@@ -70,6 +70,7 @@ position:relative;
 z-index:1;
 margin:-20px 25px 25px;
 background: transparent;
+border-collapse: separate
 }
 
 .prompt, .filled {
