--- a/bingo5.css
+++ b/bingo5.css
@@ -30,10 +30,11 @@ font-family: 'Magic Retro';
 
 }
 
+
 .bingo-name5 .bingo-word5 { 
   font-size: 42px;
 color: rgba(var(--white));
-background-image: linear-gradient(rgba(var(--white)), rgba(var(--dgray)));
+background-image: linear-gradient(rgba(var(--white)), rgba(var(--lgray)));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; 
   -moz-background-clip: text;
@@ -42,6 +43,7 @@ font-weight: 700;
 position: relative;
 left: 20px; 
 } 
+
 
 
 
