--- a/chai.css
+++ b/chai.css
@@ -33,7 +33,7 @@ top: 20px;
   height: 40px; 
   width: 140px;
   background-size: 40px 40px;
- background-position: -20 0, 0 20px, 0 0, 0 0, 0 0;
+ background-position: -20 0, 0 20px, 0 0, 0 0, 0 0; !important
   background-image: 
 linear-gradient(45deg, rgba(var(--hmain), 0.8) 25%, transparent 25%, transparent 75%, rgba(var(--hmain), 0.8) 75%, rgba(var(--hmain), 0.6)),
 linear-gradient(45deg, rgba(var(--hmain), 0.8) 25%, transparent 25%, transparent 75%, rgba(var(--hmain), 0.8) 75%, rgba(var(--hmain), 0.6)); 
@@ -55,7 +55,7 @@ linear-gradient(45deg, rgba(var(--haccent), 0.8) 25%, transparent 25%, transpare
   height: 20px; 
   width:500px;
   background-size: 20px 20px;
- background-position: -30 0, 0 30px, 0 0, 0 0, 0 0;
+ background-position: -30 0, 0 30px, 0 0, 0 0, 0 0; !important
   background-image: 
 linear-gradient(45deg, rgba(var(--gray), 0.1) 25%, transparent 25%, transparent 75%, rgba(var(--gray), 0.1) 75%, rgba(var(--gray), 0.1)),
 linear-gradient(45deg, rgba(var(--gray), 0.1) 25%, transparent 25%, transparent 75%, rgba(var(--gray), 0.1) 75%, rgba(var(--gray), 0.1)); 
