--- a/chai.css
+++ b/chai.css
@@ -1,4 +1,4 @@
-  @import "//christieclee.github.io/highalo/high/high.css";  
+   @import "//christieclee.github.io/highalo/high/high.css";  
 @import "//christieclee.github.io/alotemplates/oc-colors.css";  
 
 
@@ -30,32 +30,35 @@ top: 20px;
   } 
   
 .chai-checker1, .chai-checker2 { 
-  height: 40px; 
-  width: 140px;
-  background-size: 40px 40px;
- background-position: 20px 0, 0 -20px !important; 
+  height: 30px; 
+  width: 135px;
+  background-size: 30px 30px;
+ background-position: 15px 0px, 0px 15px !important; 
   background-image: 
-linear-gradient(45deg, rgba(var(--hmain), 0.8) 25%, transparent 25%, transparent 75%, rgba(var(--hmain), 0.8) 75%, rgba(var(--hmain), 0.6)),
-linear-gradient(45deg, rgba(var(--hmain), 0.8) 25%, transparent 25%, transparent 75%, rgba(var(--hmain), 0.8) 75%, rgba(var(--hmain), 0.6)); 
+linear-gradient(45deg, rgba(var(--hmain), 0.8) 25%, transparent 25%, transparent 75%, rgba(var(--hmain), 0.8) 75%, rgba(var(--hmain), 0.8)),
+linear-gradient(45deg, rgba(var(--hmain), 0.8) 25%, transparent 25%, transparent 75%, rgba(var(--hmain), 0.8) 75%, rgba(var(--hmain), 0.8)); 
 }
 
 .chai-checker1 { 
     position: absolute; 
+    top: 55px;
 } 
 
 .chai-checker2 { 
 position: absolute; 
 left: 320px; 
+top: 55px;
   background-image: 
-linear-gradient(45deg, rgba(var(--haccent), 0.8) 25%, transparent 25%, transparent 75%, rgba(var(--haccent), 0.8) 75%, rgba(var(--haccent), 0.6)),
-linear-gradient(45deg, rgba(var(--haccent), 0.8) 25%, transparent 25%, transparent 75%, rgba(var(--haccent), 0.8) 75%, rgba(var(--haccent), 0.6)); 
+linear-gradient(45deg, rgba(var(--haccent), 0.8) 25%, transparent 25%, transparent 75%, rgba(var(--haccent), 0.8) 75%, rgba(var(--haccent), 0.8)),
+linear-gradient(45deg, rgba(var(--haccent), 0.8) 25%, transparent 25%, transparent 75%, rgba(var(--haccent), 0.8) 75%, rgba(var(--haccent), 0.8)); 
+
 } 
 
 .chai-checker3 { 
   height: 20px; 
   width:500px;
   background-size: 20px 20px;
- background-position: 30px 0, 0 -30px  !important; 
+ background-position: -30px 0, 0 30px !important; 
   background-image: 
 linear-gradient(45deg, rgba(var(--gray), 0.1) 25%, transparent 25%, transparent 75%, rgba(var(--gray), 0.1) 75%, rgba(var(--gray), 0.1)),
 linear-gradient(45deg, rgba(var(--gray), 0.1) 25%, transparent 25%, transparent 75%, rgba(var(--gray), 0.1) 75%, rgba(var(--gray), 0.1)); 
@@ -155,6 +158,7 @@ line-height: 25px;
 font-size: 12px; 
  text-decoration: none;
  color: rgba(var(--hmain));
+ font-weight: 600;
 } 
 
 .chai-tag a::before { 
