--- a/chai.css
+++ b/chai.css
@@ -60,8 +60,8 @@ linear-gradient(45deg, rgba(var(--haccent), 0.8) 25%, transparent 25%, transpare
   background-size: 20px 20px;
  background-position: -30px 0, 0 30px !important; 
   background-image: 
-linear-gradient(45deg, rgba(var(--gray), 0.1) 25%, transparent 25%, transparent 75%, rgba(var(--gray), 0.1) 75%, rgba(var(--gray), 0.1)),
-linear-gradient(45deg, rgba(var(--gray), 0.1) 25%, transparent 25%, transparent 75%, rgba(var(--gray), 0.1) 75%, rgba(var(--gray), 0.1)); 
+linear-gradient(45deg, rgba(var(--shadow), 0.2) 25%, transparent 25%, transparent 75%, rgba(var(--shadow), 0.2) 75%, rgba(var(--shadow), 0.2)),
+linear-gradient(45deg, rgba(var(--shadow), 0.2) 25%, transparent 25%, transparent 75%, rgba(var(--shadow), 0.2) 75%, rgba(var(--shadow), 0.2)); 
 position: absolute; 
 top: 0px; 
 }
