--- a/chai.css
+++ b/chai.css
@@ -22,6 +22,13 @@
       overflow: hidden;
       border-bottom: 10px solid rgba(var(--hmain), 0.5);
   } 
+
+  
+  .chai-wrapper b { 
+      font-weight: 700;
+  color: rgba(var(--hmain), 0.8);
+  } 
+  
   
   .chai-top { 
       padding: 40px; 
