--- a/oc-colors.css
+++ b/oc-colors.css
@@ -53,6 +53,12 @@
   --hmain: 98, 117, 89;
   --haccent: 192, 125, 142;
 }
+
+  #ti {
+--hmain: 109, 157, 194;
+--haccent: 105, 164, 138;
+}
+
 #td {
 --hmain: 131, 31, 39;
 --haccent: 101, 113, 91;
