--- a/chai.css
+++ b/chai.css
@@ -1,5 +1,6 @@
   @import "//christieclee.github.io/highalo/high/high.css";  
 @import "//christieclee.github.io/alotemplates/oc-colors.css";  
+@import "//fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"; 
 
 
   .chai-wrapper { 
