--- a/sparrow.css
+++ b/sparrow.css
@@ -134,6 +134,7 @@ line-height: 25px;
   font-size: 12px; 
   text-align: right; 
   margin: 0px 20px 30px; 
+  line-height: 15px;
 } 
 
 .sparrow-tag a { 
