--- a/yew-colors.css
+++ b/yew-colors.css
@@ -4,7 +4,7 @@
   #db {
   --hmain: 68, 126, 128;
 --haccent: 196, 136, 88; 
---bg-image: url(https://cdn.discordapp.com/attachments/1064796611374493799/1064801871161724958/darius3.png);
+--bg-image: url(https://i.postimg.cc/L6cSjVQV/darius3.png);
 }
 
   #db  .yew-image2 { 
@@ -15,7 +15,7 @@
 #dh { 
 --hmain: 94, 110, 130; 
 --haccent: 175, 156, 158;
---bg-image: url(https://cdn.discordapp.com/attachments/1064796611374493799/1064804889311580160/dom.png);
+--bg-image: url(https://i.postimg.cc/cLfSh8VG/dom.png);
 } 
   #dh   .yew-image2 { 
     background-size:280%;
@@ -26,7 +26,7 @@
 #es { 
  --hmain: 74, 97, 110;
 --haccent: 191, 166, 125;
---bg-image: url(https://cdn.discordapp.com/attachments/1064796611374493799/1064818322476126248/ellis2.png);
+--bg-image: url(https://i.postimg.cc/9fVjnQhR/ellis2.png);
   }
   
   #es   .yew-image2 { 
@@ -50,7 +50,7 @@
 #jl {
 --hmain: 132, 148, 148;
 --haccent: 187, 153, 153;
---bg-image: url(https://cdn.discordapp.com/attachments/1064796611374493799/1065168126196580402/june4.png);
+--bg-image: url(https://i.postimg.cc/SKrpFbSZ/june4.png);
 }
 
   #jl   .yew-image2 { 
@@ -77,7 +77,7 @@
   #lb { 
 --hmain: 143, 61, 65; 
 --haccent:115, 136, 149;
---bg-image: url(https://cdn.discordapp.com/attachments/1064796611374493799/1065170691151888405/leonbig.png);
+--bg-image: url(https://i.postimg.cc/2ygsFzG5/leonbig.png);
 } 
   #lb   .yew-image2 { 
     background-size:320%;
@@ -89,7 +89,7 @@
  #mj { 
 --hmain: 195, 120, 85;
 --haccent: 137, 185, 177;
---bg-image: url(https://cdn.discordapp.com/attachments/1064796611374493799/1095414819919769701/marko.png);
+--bg-image: url(https://i.postimg.cc/50s1vdDH/marko.png);
 } 
   #mj   .yew-image2 { 
     background-size:280%;
@@ -112,7 +112,7 @@
   #rc { 
     --hmain: 119, 67, 92;
 --haccent: 200, 134, 97;
---bg-image: url(https://cdn.discordapp.com/attachments/1064796611374493799/1065173463029010483/ravi.png);
+--bg-image: url(https://i.postimg.cc/kMZPdcCd/ravi.png);
 } 
 
 #rc   .yew-image2 { 
@@ -125,7 +125,7 @@
 #rl {
 --haccent: 185, 195, 163;
 --hmain: 145, 145, 162;
---bg-image: url(https://cdn.discordapp.com/attachments/1064796611374493799/1110647581828190308/remy4.png);
+--bg-image: url(https://i.postimg.cc/W1cRd1tW/remy4.png);
 }
 
 #rl   .yew-image2 { 
@@ -138,7 +138,7 @@
 #rp {
   --hmain: 98, 117, 89;
   --haccent: 192, 125, 142;
-  --bg-image: url(https://cdn.discordapp.com/attachments/1064796611374493799/1095420367662755920/rhhys2.png);
+  --bg-image: url(https://i.postimg.cc/zBz8VX2Z/rhhys2.png);
 }
 
 
@@ -153,7 +153,7 @@
 #td {
 --hmain: 131, 31, 39;
 --haccent: 101, 113, 91;
---bg-image: url(https://cdn.discordapp.com/attachments/1064796611374493799/1095405452877123735/tybalt3.png);
+--bg-image: url(https://i.postimg.cc/yNX71SPy/tybalt3.png);
 }
 
 
@@ -166,7 +166,7 @@
  #ya { 
  --hmain: 183, 65, 45; 
 --haccent:218, 155, 99;
---bg-image: url(https://cdn.discordapp.com/attachments/1064796611374493799/1095420085612580884/yusuf.png);
+--bg-image: url(https://i.postimg.cc/Gh8rBfK2/yusuf.png);
 } 
 
 #ya   .yew-image2 { 
@@ -179,7 +179,7 @@
  #ti {
 --hmain: 109, 157, 194;
 --haccent: 105, 164, 138;
---bg-image: url(https://cdn.discordapp.com/attachments/1064796611374493799/1166190395458338856/teddy.png?ex=65499671&is=65372171&hm=ae567ab33927733d42ef9371c512cda179db947c33fd5384f0c281db2698ec26&);
+--bg-image: url(https://i.postimg.cc/90z2YgjL/teddy.png);
 }
 
   #ti  .yew-image2 { 
