--- a/aster.css
+++ b/aster.css
@@ -615,7 +615,7 @@ text-align: right;
 --accent: #936153;
 --main2: #9e667966; 
 --accent2: #93615366;
---img:  url(https://cdn.discordapp.com/attachments/707844943535800373/788549003234508871/alec4.png);
+--img:  url(https://i.postimg.cc/BvY1g6Ls/alec4.png);
 --name: 'Alecto V.';
 } 
 
@@ -625,7 +625,7 @@ text-align: right;
 --accent: #658682;
 --main2: #BD674566; 
 --accent2: #65868266;
---img:  url(https://cdn.discordapp.com/attachments/707844943535800373/735993996442206218/darius.png);
+--img:  url(https://i.postimg.cc/3rDDX3K5/darius.png);
 --name: 'Darius B.';
 } 
 
@@ -634,7 +634,7 @@ text-align: right;
 --accent: #a1888a;
 --main2: #5E6E8266; 
 --accent2: #a1888a66;
---img:  url(https://cdn.discordapp.com/attachments/707844943535800373/735996649553526784/dom.png);
+--img:  url(https://i.postimg.cc/BQ9PNR68/dom.png);
 --name: 'Dominic H.';
 } 
 
@@ -643,7 +643,7 @@ text-align: right;
 --accent: #738895;
 --main2: #8f3d4166; 
 --accent2: #73889566;
---img:  url(https://cdn.discordapp.com/attachments/707844943535800373/735588804743790612/Untitled-6.jpg);
+--img:  url(https://i.postimg.cc/kXQ6Hw6T/Untitled-6.jpg);
 --name: 'Leon B.';
 } 
 
@@ -652,7 +652,7 @@ text-align: right;
 --accent: #71aca2;
 --main2: #D2815866; 
 --accent2: #71aca266;
---img:  url(https://cdn.discordapp.com/attachments/707844943535800373/735997423817719818/marko.png);
+--img:  url(https://i.postimg.cc/HkTc15bd/marko.png);
 --name: 'Marko j.';
 } 
 
@@ -670,7 +670,7 @@ text-align: right;
 --accent: #936d7f;
 --main2: #923f4d66; 
 --accent2: #936d7f66;
---img:  url(https://cdn.discordapp.com/attachments/707844943535800373/735999961531154512/paris.png);
+--img:  url(https://i.postimg.cc/6pz7W3hR/paris.png);
 --name: 'paris k.';
 } 
 
@@ -680,7 +680,7 @@ text-align: right;
 --accent: #c5a77f;
 --main2: #74859d66; 
 --accent2: #c5a77f66;
---img:  url(https://cdn.discordapp.com/attachments/707844943535800373/735992304178954371/wick3.png);
+--img:  url(https://i.postimg.cc/Gp24HCMf/wick3.png);
 --name: 'Warwick H.';
 } 
 
@@ -690,7 +690,7 @@ text-align: right;
 --accent: #e2a671;
 --main2: #b13f2c66; 
 --accent2: #e2a67166;
---img:  url(https://cdn.discordapp.com/attachments/707844943535800373/736001566548426762/yusuf2.png);
+--img:  url(https://i.postimg.cc/QMyH7ywd/yusuf2.png);
 --name: 'yusuf a.';
 
 } 
@@ -761,7 +761,7 @@ text-align: right;
 --accent: #304c35;
 --main2: #8098aa66; 
 --accent2: #304c3566;
---img:  url(https://cdn.discordapp.com/attachments/707844943535800373/825943495046987817/4.png);
+--img:  url(https://i.postimg.cc/634TfhxL/4.png);
 --name: 'rhys p.';
 
 } 
