--- a/yew-colors.css
+++ b/yew-colors.css
@@ -138,7 +138,7 @@
 #rp {
   --hmain: 98, 117, 89;
   --haccent: 192, 125, 142;
-  --bg-image: url(https://i.postimg.cc/zBz8VX2Z/rhhys2.png);
+  --bg-image: url(https://i.postimg.cc/43TJR1z3/rhys2.png);
 }
 
 
