--- a/fir.css
+++ b/fir.css
@@ -253,6 +253,7 @@ opacity: 0;
   background: rgba(var(--hbackground));
   padding:0px 0px 20px; 
   left: 400px;      
+  line-height: 75px;
   -webkit-transition: ease-in-out 0.5s;  
    -ms-transition: ease-in-out 0.5s;  
    -moz-transition: ease-in-out 0.5s;  
