--- a/fir-color.css
+++ b/fir-color.css
@@ -123,7 +123,7 @@
   #wm {
 --haccent: 224, 146, 33; 
 --hmain:133, 160, 82;
---bg-image: url(https://i.postimg.cc/W1ncKXb2/31.png);
+--bg-image: url(https://i.postimg.cc/K8bSN7YF/photoshophover.png);
 }
 
   #wm .fir-image:after, #wm .fir-image2:after { 
