--- a/fir.css
+++ b/fir.css
@@ -228,13 +228,14 @@ opacity: 0;
   height: 455px;
   top: 30px;
   overflow-x: scroll;
+  overflow-y: hidden; 
   padding:0px 20px 20px 20px; 
   display: inline-flex; 
   flex-wrap: wrap; 
    -webkit-transition: ease-in-out 0.5s;  
    -ms-transition: ease-in-out 0.5s;  
    -moz-transition: ease-in-out 0.5s;  
-   -o-transition: ease-in-out 0.5s;
+   -o-transition: ease-in-out 0.5s; 
 } 
 
 .fir-right::-webkit-scrollbar { width: 0px;  }
