--- a/fir.css
+++ b/fir.css
@@ -227,8 +227,8 @@ opacity: 0;
   right: 60px; 
   height: 455px;
   top: 30px;
-  overflow-x: scroll;
-  overflow-y: hidden; 
+  overflow-x: none;
+  overflow-y: scroll; 
   padding:0px 20px 20px 20px; 
   display: inline-flex; 
   flex-wrap: wrap; 
