--- a/bootes.css
+++ b/bootes.css
@@ -1,5 +1,5 @@
-.bootes-wrapper { 
 
+.bootes-wrapper { 
     --gray: 93, 93, 93;
     --shadow: 187, 187, 187;
     --bg-bootes: 239, 239, 239;
@@ -10,7 +10,7 @@
       min-height: 00px;
       position: relative; 
       margin: 20px;
-       -webkit-text-size-adjust: none;
+      -webkit-text-size-adjust: none;
       background: rgba(var(--bg-bootes));
       border-radius: 20px;
       padding: 20px 20px 25px; 
@@ -31,7 +31,6 @@
   overflow: hidden; 
 } 
 
-
 .bootes-text:before { 
    content: "";
   position: absolute;
@@ -42,7 +41,6 @@
   transform: rotate(45deg);
   background-color: rgba(var(--bg-bootes));
   border-right: 1px solid rgba(var(--bmain));
-  
 } 
 
 .bootes-text:after { 
@@ -60,7 +58,7 @@
  .bootes-wrapper b { 
 font-family: 'proxima nova bold';
   color: rgba(var(--bmain), 0.8);
-  } 
+} 
   
   .bootes-wrapper hr { 
     border: none;
@@ -79,38 +77,38 @@ font-family: 'proxima nova bold';
     color: rgba(var(--baccent), 0.8);
     border-bottom: 1px solid rgba(var(--bmain), 0.8);
     font-family: 'proxima nova semi bold';
-    } 
-    
+ } 
 
 .bootes-text a { 
-    text-decoration: none;
-    color: rgba(var(--baccent), 0.5);
-    font-family: 'proxima nova semi bold';
-    } 
+  text-decoration: none;
+  color: rgba(var(--baccent), 0.5);
+  font-family: 'proxima nova semi bold';
+} 
 
 .bootes-bottom { 
-    width: 330px; 
-    height: 30px; 
-    padding: 10px; 
-    margin-bottom: 15px; } 
+  width: 330px; 
+  height: 30px; 
+  padding: 10px; 
+  margin-bottom: 15px; 
+} 
 
 .bootes-barcode:before {
   content: 'abcd';
   font: 39px 'Libre Barcode 39';
   color: rgba(var(--bmain));
-  padding:  10px 15px; 
+  padding:  12px 15px; 
   position: absolute;  
   left: 39px;
-  bottom: 36px; 
+  bottom: 32px; 
   width: 66px; 
-border-top: 1px solid rgba(var(--bmain));
+  border-top: 1px solid rgba(var(--bmain));
 } 
 
 .bootes-barcode:after { 
   content: "";
   position: absolute; 
   bottom: 56px; 
-  left: 144px; 
+  left: 143.5px; 
   width: 85px;
   height: 60px;
   transform: rotate(45deg);
@@ -122,21 +120,24 @@ border-top: 1px solid rgba(var(--bmain));
   font: 13px 'proxima nova semi bold';
   text-align: justify;
   position: absolute;  
-  bottom: 45px; 
+  bottom: 42px; 
   left: 53px; 
   color: rgba(var(--baccent));
   text-transform: uppercase;
-  letter-spacing: 1px;
   z-index: 4; 
-  
+  letter-spacing: 1px;
 } 
+
 .bootes-date year { 
   color: rgba(var(--bmain),0.7);
   letter-spacing: 0.75px;
-
 } 
 
-
+.bootes-date year:after { 
+  content: 'EE';
+  color: rgba(var(--bmain),0.7);
+  letter-spacing: 0.75px;
+} 
 
 .bootes-tag { 
   font-size: 12px;
@@ -147,16 +148,13 @@ border-top: 1px solid rgba(var(--bmain));
   text-align: right; 
   width: 18.8em; 
   min-height:2em; 
-
 } 
-
 
 .bootes-tag  a.user-tagged  { 
  text-decoration: none;
  color: rgba(var(--bmain));
  font-weight: 600;
  text-transform: uppercase;
-
 } 
 
 .bootes-tag  a { 
@@ -164,3 +162,4 @@ border-top: 1px solid rgba(var(--bmain));
  color: rgba(var(--bmain));
   font-weight: 600;
 } 
+  
