--- a/shell.css
+++ b/shell.css
@@ -1,7 +1,7 @@
  @import "//christieclee.github.io/highalo/high/high.css";  
 
 
-{
+.shell-wrapper {
     --gray: 93, 93, 93;
     --shadow: 187, 187, 187;
     --white: 247, 247, 247;
