--- a/shell.css
+++ b/shell.css
@@ -13,7 +13,7 @@
   box-shadow: 2px 2px rgba(var(--shadow), 0.3);
       border-radius: 10px;
   overflow: hidden; 
-  border: 1px solid rgba(var(--shadow), 0.3);
+  /*border: 1px solid rgba(var(--shadow), 0.3);*/ 
       background: linear-gradient(0deg,rgba(var(--hmain), 0.2) 0%, rgba(var(--white), 0.5) 20%);
 }
 
