--- a/shell.css
+++ b/shell.css
@@ -1,6 +1,5 @@
  @import "//christieclee.github.io/highalo/high/high.css";  
 
-
 .shell-wrapper {
     --gray: 93, 93, 93;
     --shadow: 187, 187, 187;
@@ -10,11 +9,12 @@
       min-height: 100px;
       position: relative; 
       margin: 20px;
-  box-shadow: 2px 2px rgba(var(--shadow), 0.3);
+      box-shadow: 2px 2px rgba(var(--shadow), 0.3);
       border-radius: 10px;
-  overflow: hidden; 
-  /*border: 1px solid rgba(var(--shadow), 0.3);*/ 
-      background: linear-gradient(0deg,rgba(var(--hmain), 0.2) 0%, rgba(var(--white), 0.5) 20%);
+      overflow: hidden; 
+      border: 1px solid rgba(var(--shadow), 0.3);
+
+ background: rgba(var(--white), 0.6);
 }
 
   .shell-wrapper b { 
@@ -32,6 +32,7 @@
   text-shadow: 1px 1px rgba(var(--haccent), 0.4) ;
 } 
 
+
 .shell-date { 
   font-weight: 700;
   text-transform: uppercase; 
@@ -47,9 +48,9 @@
   position: relative; 
   display: inline-block;
   margin: 35px 0px;  
-    font-size: 14.75px; 
 line-height: 25px;
 color: rgba(var(--black), 0.9);
+    font-size: 14.75px; 
 } 
   
 .shell-text i { 
@@ -76,6 +77,7 @@ color: rgba(var(--black), 0.9);
   position: absolute; 
   bottom: 0px; 
   width: 100%;
+  background: linear-gradient(0deg,rgba(var(--hmain), 0.2) 0%, rgba(var(--white), 0.6) 60%);
 } 
 
 .shell-bottom:before { 
@@ -99,6 +101,7 @@ color: rgba(var(--black), 0.9);
 position: relative; 
 margin: 50px 0px; 
 text-align: right; 
+  font-size: 13px;
 }
 
 .shell-tag  a.user-tagged  { 
@@ -111,10 +114,9 @@ text-align: right;
 
 .shell-tag  a { 
  text-decoration: none;
- color: rgba(var(--hmain), 0.5);
-  font-weight: 600;  
-} 
-
+ color: rgba(var(--hmain), 0.5) ;
+ font-weight: 600;  
+}
 
 /*color*/ 
 
